// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`📸 Alert Snapshots > ✅ Snapshot: Alert default 1`] = `
<div
  class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground bg-background text-foreground"
  role="alert"
>
  <h5
    class="mb-1 font-medium leading-none tracking-tight"
  >
    Alert Title
  </h5>
  <div
    class="text-sm [&_p]:leading-relaxed"
  >
    This is an alert message
  </div>
</div>
`;

exports[`📸 Alert Snapshots > ✅ Snapshot: Alert variants 1`] = `
<div
  class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground bg-background text-foreground"
  role="alert"
>
  <h5
    class="mb-1 font-medium leading-none tracking-tight"
  >
    Default
  </h5>
  <div
    class="text-sm [&_p]:leading-relaxed"
  >
    Default alert
  </div>
</div>
`;

exports[`📸 Alert Snapshots > ✅ Snapshot: Alert variants 2`] = `
<div
  class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 border-destructive/50 text-destructive dark:border-destructive [&>svg]:text-destructive"
  role="alert"
>
  <h5
    class="mb-1 font-medium leading-none tracking-tight"
  >
    Error
  </h5>
  <div
    class="text-sm [&_p]:leading-relaxed"
  >
    Destructive alert
  </div>
</div>
`;

exports[`📸 Alert Snapshots > ✅ Snapshot: Alert without title 1`] = `
<div
  class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground bg-background text-foreground"
  role="alert"
>
  <div
    class="text-sm [&_p]:leading-relaxed"
  >
    Alert without title
  </div>
</div>
`;

exports[`📸 Badge Snapshots > ✅ Snapshot: Badge default 1`] = `
<div
  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80"
>
  Default
</div>
`;

exports[`📸 Badge Snapshots > ✅ Snapshot: Badge variants 1`] = `
<div
  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80"
>
  Default
</div>
`;

exports[`📸 Badge Snapshots > ✅ Snapshot: Badge variants 2`] = `
<div
  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80"
>
  Secondary
</div>
`;

exports[`📸 Badge Snapshots > ✅ Snapshot: Badge variants 3`] = `
<div
  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-destructive text-destructive-foreground hover:bg-destructive/80"
>
  Destructive
</div>
`;

exports[`📸 Badge Snapshots > ✅ Snapshot: Badge variants 4`] = `
<div
  class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground"
>
  Outline
</div>
`;

exports[`📸 Button Snapshots > ✅ Snapshot: Button default 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-semibold ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 shadow-sm hover:shadow-md active:scale-[0.98] bg-indigo-600 text-white hover:bg-indigo-700 active:bg-indigo-800 dark:bg-indigo-500 dark:hover:bg-indigo-600 h-10 px-4 py-2 text-sm"
>
  Default Button
</button>
`;

exports[`📸 Button Snapshots > ✅ Snapshot: Button destructive 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-semibold ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 shadow-sm hover:shadow-md active:scale-[0.98] bg-red-600 text-white hover:bg-red-700 active:bg-red-800 dark:bg-red-500 dark:hover:bg-red-600 h-10 px-4 py-2 text-sm"
>
  Delete
</button>
`;

exports[`📸 Button Snapshots > ✅ Snapshot: Button disabled 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-semibold ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 shadow-sm hover:shadow-md active:scale-[0.98] bg-indigo-600 text-white hover:bg-indigo-700 active:bg-indigo-800 dark:bg-indigo-500 dark:hover:bg-indigo-600 h-10 px-4 py-2 text-sm"
  disabled=""
>
  Disabled
</button>
`;

exports[`📸 Button Snapshots > ✅ Snapshot: Button ghost 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-semibold ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 shadow-sm hover:shadow-md active:scale-[0.98] text-gray-900 hover:bg-gray-100 hover:text-gray-900 active:bg-gray-200 dark:text-gray-100 dark:hover:bg-gray-800 dark:hover:text-gray-100 h-10 px-4 py-2 text-sm"
>
  Ghost
</button>
`;

exports[`📸 Button Snapshots > ✅ Snapshot: Button outline 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-semibold ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 shadow-sm hover:shadow-md active:scale-[0.98] border-2 border-gray-400 bg-white text-gray-900 hover:bg-gray-100 hover:border-gray-500 active:bg-gray-200 dark:bg-gray-900 dark:text-gray-100 dark:border-gray-600 dark:hover:bg-gray-800 h-10 px-4 py-2 text-sm"
>
  Outline
</button>
`;

exports[`📸 Button Snapshots > ✅ Snapshot: Button primary 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-semibold ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 shadow-sm hover:shadow-md active:scale-[0.98] bg-indigo-600 text-white hover:bg-indigo-700 active:bg-indigo-800 dark:bg-indigo-500 dark:hover:bg-indigo-600 h-10 px-4 py-2 text-sm"
>
  Primary
</button>
`;

exports[`📸 Button Snapshots > ✅ Snapshot: Button sizes 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap font-semibold ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 shadow-sm hover:shadow-md active:scale-[0.98] bg-indigo-600 text-white hover:bg-indigo-700 active:bg-indigo-800 dark:bg-indigo-500 dark:hover:bg-indigo-600 h-8 rounded-md px-3 text-xs"
>
  Small
</button>
`;

exports[`📸 Button Snapshots > ✅ Snapshot: Button sizes 2`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-semibold ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 shadow-sm hover:shadow-md active:scale-[0.98] bg-indigo-600 text-white hover:bg-indigo-700 active:bg-indigo-800 dark:bg-indigo-500 dark:hover:bg-indigo-600 h-10 px-4 py-2 text-sm"
>
  Default
</button>
`;

exports[`📸 Button Snapshots > ✅ Snapshot: Button sizes 3`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap font-semibold ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 shadow-sm hover:shadow-md active:scale-[0.98] bg-indigo-600 text-white hover:bg-indigo-700 active:bg-indigo-800 dark:bg-indigo-500 dark:hover:bg-indigo-600 h-12 rounded-md px-8 text-base"
>
  Large
</button>
`;

exports[`📸 Card Snapshots > ✅ Snapshot: Card complete 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <h3
      class="text-2xl font-semibold leading-none tracking-tight"
    >
      Card Title
    </h3>
    <div
      class="text-sm text-muted-foreground"
    >
      This is a card description
    </div>
  </div>
  <div
    class="p-6 pt-0"
  >
    <p>
      Card content goes here
    </p>
  </div>
</div>
`;

exports[`📸 Card Snapshots > ✅ Snapshot: Card simple 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm"
>
  <div
    class="p-6 pt-0"
  >
    Simple card
  </div>
</div>
`;

exports[`📸 Card Snapshots > ✅ Snapshot: Card with custom className 1`] = `
<div
  class="rounded-lg border text-card-foreground shadow-sm bg-blue-500"
>
  <div
    class="p-6 pt-0"
  >
    Custom styled card
  </div>
</div>
`;

exports[`📸 Complex Layouts Snapshots > ✅ Snapshot: Dashboard card layout 1`] = `
<div
  class="grid grid-cols-3 gap-4"
>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight"
      >
        Total Properties
      </h3>
    </div>
    <div
      class="p-6 pt-0"
    >
      <p
        class="text-3xl font-bold"
      >
        125
      </p>
    </div>
  </div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight"
      >
        Total Tenants
      </h3>
    </div>
    <div
      class="p-6 pt-0"
    >
      <p
        class="text-3xl font-bold"
      >
        89
      </p>
    </div>
  </div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight"
      >
        Revenue
      </h3>
    </div>
    <div
      class="p-6 pt-0"
    >
      <p
        class="text-3xl font-bold"
      >
        €125,000
      </p>
    </div>
  </div>
</div>
`;

exports[`📸 Complex Layouts Snapshots > ✅ Snapshot: Form layout 1`] = `
<form
  class="space-y-4"
>
  <div>
    <label
      for="name"
    >
      Name
    </label>
    <input
      class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
      id="name"
      placeholder="Enter your name"
    />
  </div>
  <div>
    <label
      for="email"
    >
      Email
    </label>
    <input
      class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
      id="email"
      placeholder="Enter your email"
      type="email"
    />
  </div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-semibold ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 shadow-sm hover:shadow-md active:scale-[0.98] bg-indigo-600 text-white hover:bg-indigo-700 active:bg-indigo-800 dark:bg-indigo-500 dark:hover:bg-indigo-600 h-10 px-4 py-2 text-sm"
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`📸 Complex Layouts Snapshots > ✅ Snapshot: List with badges 1`] = `
<ul
  class="space-y-2"
>
  <li
    class="flex justify-between items-center"
  >
    <span>
      Property 1
    </span>
    <div
      class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80"
    >
      Available
    </div>
  </li>
  <li
    class="flex justify-between items-center"
  >
    <span>
      Property 2
    </span>
    <div
      class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80"
    >
      Rented
    </div>
  </li>
  <li
    class="flex justify-between items-center"
  >
    <span>
      Property 3
    </span>
    <div
      class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-destructive text-destructive-foreground hover:bg-destructive/80"
    >
      Maintenance
    </div>
  </li>
</ul>
`;

exports[`📸 Input Snapshots > ✅ Snapshot: Input default 1`] = `
<input
  class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
  placeholder="Enter text"
/>
`;

exports[`📸 Input Snapshots > ✅ Snapshot: Input disabled 1`] = `
<input
  class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
  disabled=""
  placeholder="Disabled"
/>
`;

exports[`📸 Input Snapshots > ✅ Snapshot: Input types 1`] = `
<input
  class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
  type="text"
/>
`;

exports[`📸 Input Snapshots > ✅ Snapshot: Input types 2`] = `
<input
  class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
  type="email"
/>
`;

exports[`📸 Input Snapshots > ✅ Snapshot: Input types 3`] = `
<input
  class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
  type="password"
/>
`;

exports[`📸 Input Snapshots > ✅ Snapshot: Input types 4`] = `
<input
  class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
  type="number"
/>
`;

exports[`📸 Input Snapshots > ✅ Snapshot: Input with value 1`] = `
<input
  class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
  readonly=""
  value="Test value"
/>
`;
